# GABench

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirement.txt
agents/: base.py  plan_and_react.py  plan_and_solve.py  react.py
benchmark/: benchmark.csv
core/: llm.py  mcp_client.py  mcp_server.py
dataset/: 2015_Nature_Africa_PR.2000.tif  2015_Nature_Africa_PR.2015.tif  After_storm.tif  AllSeasonRoads.geojson  AtlanticDEM.tif  Bay.geojson  Before_storm.tif  CensusBlock.geojson  DissolvedO2.geojson  Global_ocean_measurements.dbf  Global_ocean_measurements.shp  Global_ocean_measurements.shx  Global_shallow_waters.dbf  Global_shallow_waters.shp  Global_shallow_waters.shx  High_Blood_Level_Results.dbf  High_Blood_Level_Results.shp  High_Blood_Level_Results.shx  Marketplace.dbf  Marketplace.sbn  Marketplace.sbx  Marketplace.shp  Marketplace.shx  Sacramento_ZIP_Codes.dbf  Sacramento_ZIP_Codes.shp  Sacramento_ZIP_Codes.shx  ShikokuMetropolitan.geojson  ShikokuPopulation.geojson  Temperature.geojson  TsunamiPaths.dbf  TsunamiPaths.prj  TsunamiPaths.shp  TsunamiPaths.shx  USA_States.dbf  USA_States.shp  USA_States.shx  USA_seagrass.dbf  USA_seagrass.prj  USA_seagrass.shp  USA_seagrass.shx  (+92 more)
dataset/result/: data_rf_auc_metrics.json  deforestation_rate.csv  (+1 more)
evaluation/: analyze_llm_usage.py  end_to_end.py  step_by_step.py  vlm_judge.py
prompts/: base.py  plan_and_react.py  plan_and_solve.py  react.py
runners/: replay_logs.py  run_benchmark.py
toolbox/: Data.py  GeoAI.py  Network.py  Raster.py  Spatial.py  Vector.py  Visual.py
